--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   font-weight: normal;
   font-style: normal;
 
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -59,7 +59,7 @@
   font-weight: bold;
   font-style: normal;
 
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -73,7 +73,7 @@
   font-weight: normal;
   font-style: italic;
 
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -87,7 +87,7 @@
   font-weight: bold;
   font-style: italic;
 
-  font-display: swap;
+  font-display: block;
 }
 
 /* Selector style rules */
